--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
     <div class="container">
         <!-- album 1: Dua Lipa -->
         <div class="row">
-            <div class="col-md-7">
-                <a name="dualipa">
-                <h1> Dua Lipa</h1>
+            <div class="col-md-6 mt-5">
+                <h1>  <a name="dualipa"> </a>Dua Lipa</h1>
                 <h4 class="float-right"> By Dua Lipa</h4>
                 <img src="afbeeldingen/dualipa_album.jpg" class="img-fluid "  alt="Albumcover Dua Lipa">
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <p>
                     <h4 class="mt-5"> Tracklist</h4>
                         <button type="button" class="btn btn-outline-info">
@@ -118,13 +117,12 @@
             <hr class="featurette-divider">
 
             <!-- album 2: Sound Of Change -->
-            <div class="col-md-7">
-                <a name="dirtyheads">
-                <h1> Sound Of Change</h1>
+            <div class="col-md-6 mt-5">
+                <h1> <a name="dirtyheads"></a> Sound Of Change</h1>
                 <h4 class="float-right"> By Dirty Heads</h4>
                 <img src="afbeeldingen/soundofchange.jpg" class="img-fluid "  alt="Albumcover Dua Lipa">
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <p>
                     <h4 class="mt-5"> Tracklist</h4>
                         <button type="button" class="btn btn-outline-info mb-3">
@@ -164,15 +162,14 @@
             </div>
             <hr class="featurette-divider">
             <!-- album 3: Sway -->
-            <div class="col-md-7">
-                <a name="marianhill">
-                <h1> Sway</h1>
+            <div class="col-md-6 mt-5">
+                <h1> <a name="marianhill"> </a> Sway</h1>
                 <h4 class="float-right"> By Marian Hill</h4>
                 <div class="mx-auto">
                 <img src="afbeeldingen/sway.jpg" class="img-fluid "  alt="Albumcover Dua Lipa">
                 </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <p>
                     <h4 class="mt-5"> Tracklist</h4>
                         <button type="button" class="btn btn-outline-info mb-3">
