--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="col-md-6 mt-5">
                 <h1> <a name="dirtyheads"></a> Sound Of Change</h1>
                 <h4 class="float-right"> By Dirty Heads</h4>
-                <img src="afbeeldingen/soundofchange.jpg" class="img-fluid "  alt="Albumcover Dua Lipa">
+                <img src="afbeeldingen/soundofchange.jpg" class="img-fluid "  alt="Albumcover Dirty Heads">
             </div>
             <div class="col-md-6">
                 <p>
@@ -201,6 +201,7 @@
                         </div>
             </div>
         </div>
+        <hr class="featurette-divider">
 
     </div> <!-- container -->
 
