--- a/index.html
+++ b/index.html
@@ -67,21 +67,20 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-          <hr class="featurette-divider">
 
     <div class="container">
         <!-- album 1: Dua Lipa -->
         <div class="row">
-            <div class="col-md-6 mt-5">
+            <div class="col-md-6 mt-3">
                 <div class="d-flex flex-column float-right">
-                <h1> <a name="dualipa"> </a>Dua Lipa</h1>
+                <h2> <a name="dualipa"> </a>Dua Lipa</h2>
                 <h4 > By Dua Lipa</h4>
                 </div>
                 <img src="afbeeldingen/dualipa_album.jpg" class="img-fluid "  alt="Albumcover Dua Lipa">
             </div>
             <div class="col-md-6 flexible">
-                <p>
-                    <h4 class="mt-5"> Tracklist</h4>
+                <p class="ml-3">
+                    <h4 class="mt-5 "> Tracklist</h4>
                         <button type="button" class="btn btn-outline-info">
                             <span class="glyphicon glyphicon-headphones justify-content-end"></span >Listen</button>
                         <button type="button" class="btn btn-outline-danger">Buy</button>
@@ -119,9 +118,9 @@
             <hr class="featurette-divider">
 
             <!-- album 2: Sound Of Change -->
-            <div class="col-md-6 mt-5">
+            <div class="col-md-6 mt-3">
                 <div class="d-flex flex-column float-right">
-                <h1> <a name="dirtyheads"></a> Sound Of Change</h1>
+                <h2> <a name="dirtyheads"></a> Sound Of Change</h2>
                 <h4 > By Dirty Heads</h4>
                 </div>
                 <img src="afbeeldingen/soundofchange.jpg" class="img-fluid "  alt="Albumcover Dirty Heads">
@@ -166,16 +165,16 @@
             </div>
             <hr class="featurette-divider">
             <!-- album 3: Sway -->
-            <div class="col-md-8 mt-5">
+            <div class="col-md-6 mt-3">
                 <div class="d-flex flex-column float-right">
-                <h1 > <a name="marianhill"> </a> Sway</h1>
+                <h2 > <a name="marianhill"> </a> Sway</h1>
                 <h4 > By Marian Hill</h4>
                 </div>
                 <div class="mx-auto">
                 <img src="afbeeldingen/sway.jpg" class="img-fluid "  alt="Albumcover Dua Lipa">
                 </div>
             </div>
-            <div class="col-md-4 flexible">
+            <div class="col-md-6 flexible">
                 <p>
                     <h4 class="mt-5"> Tracklist</h4>
                         <button type="button" class="btn btn-outline-info mb-3">
