--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="afbeeldingen/cover.jpg" alt="First slide">
-                    <div class="carousel-caption mb-md-5">
-                        <h1> Top Pieces Of Music</h1>
+                    <div class="carousel-caption">
+                        <h1 class="mb-md-5"> Top Pieces Of Music</h1>
                             <a href="#dualipa">
                                 <button type="button" class="btn btn-secondary col-5">Discover</button>
                             </a>
@@ -71,7 +71,8 @@
     <div class="container">
         <!-- album 1: Dua Lipa -->
         <div class="row">
-            <div class="col-md-6 mt-3">
+            <div class="row mx-auto blue">
+            <div class="col-md-6">
                 <div class="d-flex flex-column float-right">
                 <h2> <a name="dualipa"> </a>Dua Lipa</h2>
                 <h4 > By Dua Lipa</h4>
@@ -79,8 +80,8 @@
                 <img src="afbeeldingen/dualipa_album.jpg" class="img-fluid "  alt="Albumcover Dua Lipa">
             </div>
             <div class="col-md-6 flexible">
-                <p class="ml-3">
-                    <h4 class="mt-5 "> Tracklist</h4>
+                <p >
+                    <h4 class="mt-md-5 "> Tracklist</h4>
                         <button type="button" class="btn btn-outline-info">
                             <span class="glyphicon glyphicon-headphones justify-content-end"></span >Listen</button>
                         <button type="button" class="btn btn-outline-danger">Buy</button>
@@ -99,8 +100,8 @@
                             <li> Homesick </li>
                         </div>
                 </p>
-                <p>
-                    <button type="button" class="btn btn-dark" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"> More </button>
+                <div >
+                    <button type="button" class="btn btn-dark mb-2" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"> More </button>
                     <div class="col-md-10">  
                         <div class="collapse" id="collapseExample">
                             <div class="card card-body">
@@ -114,11 +115,13 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
-            <hr class="featurette-divider">
+            </div>
 
             <!-- album 2: Sound Of Change -->
-            <div class="col-md-6 mt-3">
+            <div class="row mx-auto mt-2 red">
+            <div class="col-md-6">
                 <div class="d-flex flex-column float-right">
                 <h2> <a name="dirtyheads"></a> Sound Of Change</h2>
                 <h4 > By Dirty Heads</h4>
@@ -127,10 +130,10 @@
             </div>
             <div class="col-md-6 flexible">
                 <p>
-                    <h4 class="mt-5"> Tracklist</h4>
-                        <button type="button" class="btn btn-outline-info mb-3">
+                    <h4 class="mt-md-5"> Tracklist</h4>
+                        <button type="button" class="btn btn-outline-danger mb-3">
                             <span class="glyphicon glyphicon-headphones justify-content-end"></span >Listen</button>
-                        <button type="button" class="btn btn-outline-danger mb-3">Buy</button>
+                        <button type="button" class="btn btn-outline-info mb-3">Buy</button>
                         <div class="tracklist">
                             <li> Sound Of Change</li>
                             <li> My Sweet Summer</li>
@@ -147,8 +150,8 @@
                             <li> Running For Your Life</li>
                         </div>
                 </p>
-                <p>
-                    <button type="button" class="btn btn-dark" data-toggle="collapse" href="#collapseExample2" aria-expanded="false" aria-controls="collapseExample"> More </button>
+                <div>
+                    <button type="button" class="btn btn-dark mb-2" data-toggle="collapse" href="#collapseExample2" aria-expanded="false" aria-controls="collapseExample"> More </button>
                         <div class="col-md-10">  
                             <div class="collapse" id="collapseExample2">
                                 <div class="card card-body">
@@ -162,10 +165,13 @@
                                 </div>
                             </div>
                         </div>
+                </div>
             </div>
-            <hr class="featurette-divider">
+            </div>
+
             <!-- album 3: Sway -->
-            <div class="col-md-6 mt-3">
+            <div class="row mx-auto mt-2 blue">
+            <div class="col-md-6">
                 <div class="d-flex flex-column float-right">
                 <h2 > <a name="marianhill"> </a> Sway</h1>
                 <h4 > By Marian Hill</h4>
@@ -176,7 +182,7 @@
             </div>
             <div class="col-md-6 flexible">
                 <p>
-                    <h4 class="mt-5"> Tracklist</h4>
+                    <h4 class="mt-md-5"> Tracklist</h4>
                         <button type="button" class="btn btn-outline-info mb-3">
                             <span class="glyphicon glyphicon-headphones justify-content-end"></span >Listen</button>
                         <button type="button" class="btn btn-outline-danger mb-3" >Buy</button>
@@ -191,7 +197,7 @@
                         </div>
                 </p>
                 <p>
-                    <button type="button" class="btn btn-dark" data-toggle="collapse" href="#collapseExample3" aria-expanded="false" aria-controls="collapseExample"> More </button>
+                    <button type="button" class="btn btn-dark mb-2" data-toggle="collapse" href="#collapseExample3" aria-expanded="false" aria-controls="collapseExample"> More </button>
                         <div class="col-md-10">  
                             <div class="collapse" id="collapseExample3">
                                 <div class="card card-body">
@@ -205,6 +211,7 @@
                             </div>
                         </div>
             </div>
+        </div>
         </div>
         <hr class="featurette-divider">
 
