--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="row mx-auto blue">
             <div class="col-md-6">
                 <div class="d-flex flex-column float-right">
-                <h2> <a name="dualipa"> </a>Dua Lipa</h2>
+                <h2> <a name="dualipa"> </a>Dua Lipa / 2017</h2>
                 <h4 > By Dua Lipa</h4>
                 </div>
                 <img src="afbeeldingen/dualipa_album.jpg" class="img-fluid "  alt="Albumcover Dua Lipa">
@@ -106,11 +106,11 @@
                         <div class="collapse" id="collapseExample">
                             <div class="card card-body">
                                 <h3> Artist & Style</h3>
-                                <p> Dua lipa (Lipa - Albanees voor ‘ik hou van u’ ) is a british singer. Dua Lipa is well-known for her sultry vocals, the dark storylines and honest lyrics of her songs 
-                                    and her “progressive” pop sound. She describes her musical style as “dark pop”. Her biggest influence is Canadian pop singer 
-                                    Nelly Furtado. She also cites Pink, J. Cole, David Bowie, 2Pac, Kendrick Lamar, Bob Dylan, 50 Cent and A$AP Rocky as huge influences 
-                                    on her music, but also on the way she writes and sings.Na twee jaar is haar titelloze debuut eindelijk klaar. Met een opvallend 
-                                    grote invloed van hiphop. Zelf houdt ze het op ‘dark pop’. De Queen of Dark Pop. Klinkt goed.  ]
+                                <p> Dua lipa  is a british singer. Shea is well-known for 
+                                    her sultry vocals, the dark storylines and honest lyrics of her songs and her “progressive” pop 
+                                    sound. Her biggest influence is Canadian pop singer Nelly Furtado. She also cites Pink, J. Cole, David Bowie, 2Pac, Kendrick Lamar, Bob 
+                                    Dylan, 50 Cent and A$AP Rocky as huge influences on her music, but also on the way she 
+                                    writes and sings.
                                 </p>
                             </div>
                         </div>
@@ -123,7 +123,7 @@
             <div class="row mx-auto mt-2 red">
             <div class="col-md-6">
                 <div class="d-flex flex-column float-right">
-                <h2> <a name="dirtyheads"></a> Sound Of Change</h2>
+                <h2> <a name="dirtyheads"></a> Sound Of Change / 2014 </h2>
                 <h4 > By Dirty Heads</h4>
                 </div>
                 <img src="afbeeldingen/soundofchange.jpg" class="img-fluid "  alt="Albumcover Dirty Heads">
@@ -156,11 +156,11 @@
                             <div class="collapse" id="collapseExample2">
                                 <div class="card card-body">
                                     <h3> Artist & Style</h3>
-                                        <p> Dirty Heads is a five-piece band founded in 2006. leaning heavily on reggae fused with hip-hop cornerstones 
-                                            and scaling back for more acoustic fare, darting between extremes. 
-                                            Sound of Change, which highlights the musical evolution and diversity of this group. With its wide range of sound
-                                            and lyrical interaction, there is definitely something for everyone on this album.General vibe; people suck,
-                                            but life can be good. I dig. ]
+                                        <p> Dirty Heads is a five-piece band founded in 2006. Their music leans on reggae fused with 
+                                            hip-hop cornerstones and scales back for more acoustic fare, darting between extremes. 
+                                            Sound of Change, highlights the musical evolution and diversity of this group. With its 
+                                            wide range of sound, and lyrical interaction, there is definitely something for everyone on this 
+                                            album. The general vibe of the album: people suck, but life can be good.  
                                         </p>
                                 </div>
                             </div>
@@ -173,7 +173,7 @@
             <div class="row mx-auto mt-2 blue">
             <div class="col-md-6">
                 <div class="d-flex flex-column float-right">
-                <h2 > <a name="marianhill"> </a> Sway</h1>
+                <h2 > <a name="marianhill"> </a> Sway / 2015</h1>
                 <h4 > By Marian Hill</h4>
                 </div>
                 <div class="mx-auto">
@@ -202,10 +202,11 @@
                             <div class="collapse" id="collapseExample3">
                                 <div class="card card-body">
                                     <h3> Artist & Style</h3>
-                                    <p>[Marian Hill is an American Singer songwriter duo. influences ranging from Cole Porter to Kanye, from Ella Fitzgerald to Drake,
-                                        while many artists define themselves by the mixture of inspirations they’ve concocted, Marian Hill go one step further: 
-                                        fusing disparate sources into a compound sound that’s hard to imagine ever having been apart. Their unique sound combines 
-                                        sparse, minimal electronic beats with seductive vocals (which are often chopped up and manipulated) along with sultry saxophone. ]
+                                    <p>Marian Hill is an American Singer songwriter duo. influences ranging from Cole Porter to 
+                                        Kanye, from Ella Fitzgerald to Drake. They  fuse disparate sources into  a compound sound that’s 
+                                        hard to imagine ever having been apart. Their unique sound combines sparse, 
+                                        minimal electronic beats with seductive vocals (which are often chopped up 
+                                        and manipulated) along with sultry saxophone.  
                                     </p>
                                 </div>
                             </div>
